--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -112,18 +112,18 @@ jobs:
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
 
           filterhost() {
-            [ ! -f "$1" ] && echo invalid filename: $1 && exit 1
+            [ ! -s "$1" ] && echo no domain in $1 && return
             [ -f tocheck.txt ] && rm tocheck.txt 2>/dev/null
             for d in `cat $1|sort -u`; do
+              dig +short @1.1.1.1 $d
               ip=$(dig +short @1.1.1.1 $d | grep -v '\.$' | head -n1)
-              echo echo $ip $d
               [ ! -z "$ip" ] && echo $ip $d >> tocheck.txt
             done
             if [ -s tocheck.txt ]; then
               [ -f src/cfcidr.js ] && mv src/cfcidr.js src/cfcidr.mjs
               node ./.github/filterhost.mjs tocheck.txt > $1
-            else
-              echo > $1
+            else 
+              > $1
             fi
           }
 
@@ -149,13 +149,14 @@ jobs:
               wc -l bak.txt >> $GITHUB_STEP_SUMMARY
               wc -l orig.txt >> $GITHUB_STEP_SUMMARY
 
+              echo 'filtering ...' >> $GITHUB_STEP_SUMMARY
               filterhost bak.txt
-              [ '${{ contains(github.event.schedule, '* * * *') }}' = false ] && filterhost orig.txt
-              
-              echo 'after filtering ...' >> $GITHUB_STEP_SUMMARY
               wc -l bak.txt >> $GITHUB_STEP_SUMMARY
-              wc -l orig.txt >> $GITHUB_STEP_SUMMARY
-              [ ! -s orig.txt ] && echo 'filterhost error!' && exit 1
+              if [ '${{ contains(github.event.schedule, '* * * *') }}' = false ]; then
+                filterhost orig.txt
+                wc -l orig.txt >> $GITHUB_STEP_SUMMARY
+                [ ! -s orig.txt ] && echo 'filterhost error!' && exit 1
+              fi
               
               echo [$(echo `cat bak.txt orig.txt`|tr -s ' ' ',')] > $3
               bak=[$(echo `cat bak.txt`|tr -s ' ' ',')]
