verify the cfhost data

--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -115,8 +115,8 @@ jobs:
             [ ! -s "$1" ] && echo no domain in $1 && return
             [ -f tocheck.txt ] && rm tocheck.txt 2>/dev/null
             for d in `cat $1|sort -u`; do
-              dig +short @1.1.1.1 $d
-              ip=$(dig +short @1.1.1.1 $d | grep -v '\.$' | head -n1)
+              dig +short $d @1.1.1.1
+              ip=$(dig +short $d @1.1.1.1 | grep -v '\.$' | head -n1)
               [ ! -z "$ip" ] && echo $ip $d >> tocheck.txt
             done
             if [ -s tocheck.txt ]; then
@@ -157,7 +157,7 @@ jobs:
                 wc -l orig.txt >> $GITHUB_STEP_SUMMARY
                 [ ! -s orig.txt ] && echo 'filterhost error!' && exit 1
               fi
-              
+
               echo [$(echo `cat bak.txt orig.txt`|tr -s ' ' ',')] > $3
               bak=[$(echo `cat bak.txt`|tr -s ' ' ',')]
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
