--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -121,12 +121,21 @@ jobs:
             done
             if [ -s tocheck.txt ]; then
               local cidr='src/cfcidr'
-              [ -f $cidr.js ] && mv $cidr.js $cidr.mjs
+              [ -f $cidr.js ] && local js=1 && mv $cidr.js $cidr.mjs
               node ./.github/filterhost.mjs tocheck.txt > $1
-              [ -f $cidr.mjs ] && mv $cidr.mjs $cidr.js
+              [ "$js" = 1 ] && mv $cidr.mjs $cidr.js
             else 
               > $1
             fi
+          }
+
+          json_array_tolines(){
+            if [ -f "$1" ]; then cat $1; else echo $1; fi|tr -d '["]'|sed -r 's/, */\n/g'
+          }
+          file_lines_tojson(){
+            local uniq=0; 
+            [ "$1" = '-u' ] && uniq=1 && shift;
+            echo [$(echo `cat $@|if [ "uniq" = 1 ]; then sort -u; else cat; fi|sed -r 's/(.*)/"\1"/'`|tr -s ' ' ',')]
           }
 
           check_backup(){
@@ -134,35 +143,39 @@ jobs:
             if echo "$ret"|grep error; then
               grep 'namespace not found' <<< "$ret" && exit 1 || echo "$ret"
             elif [ ! -z "$ret" ] && [ "$ret" != "[]" ]; then
-              echo "get-data $1" >> $GITHUB_STEP_SUMMARY
-              #curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
-              #  -d "" "$CF_KV_API/$1" >> $GITHUB_STEP_SUMMARY
-              echo $ret|tr -d '["]'|sed -r 's/, */\n/g' > bak.txt
+              json_array_tolines $ret > remote.txt
+              echo "get kv $1" >> $GITHUB_STEP_SUMMARY
+              wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               
               local bak=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$2"`
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ "$bak" != "[]" ]; then
-                echo $bak|tr -d '["]'|sed -r 's/, */\n/g' >> bak.txt
+                json_array_tolines $bak >> remote.txt
+                ret=`file_lines_tojson -u remote.txt`
                 [ "$ret" = "$bak" ] && echo "cfhostChanged=false" >> $GITHUB_ENV;
+                echo "get kv $2, merge" >> $GITHUB_STEP_SUMMARY
+                wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               fi
               
-              echo `cat $3`|tr -d '["]'|sed -r 's/, */\n/g' > orig.txt
-              diff -b -y --suppress-common-lines bak.txt orig.txt | grep '<' | sed 's/< *//' > tmp
-              mv tmp bak.txt
-              wc -l bak.txt >> $GITHUB_STEP_SUMMARY
-              wc -l orig.txt >> $GITHUB_STEP_SUMMARY
-
+              json_array_tolines $3 > local.txt
+              wc -l local.txt >> $GITHUB_STEP_SUMMARY
+              diff -b --suppress-common-lines remote.txt local.txt | grep '<' | sed 's/< *//' > tmp
+              mv tmp remote.txt
+              echo "after diff local" >> $GITHUB_STEP_SUMMARY
+              wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+              
               echo 'filtering ...' >> $GITHUB_STEP_SUMMARY
-              filterhost bak.txt
-              wc -l bak.txt >> $GITHUB_STEP_SUMMARY
+              filterhost remote.txt
+              wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               if [ '${{ contains(github.event.schedule, '* * * *') }}' = false ]; then
-                filterhost orig.txt
-                wc -l orig.txt >> $GITHUB_STEP_SUMMARY
-                [ ! -s orig.txt ] && echo 'filterhost error!' && exit 1
+                filterhost local.txt
+                wc -l local.txt >> $GITHUB_STEP_SUMMARY
+                [ ! -s local.txt ] && echo 'filterhost error!' && exit 1
               fi
-              echo [$(echo `cat bak.txt orig.txt|sed -r 's/(.*)/"\1"/'`|tr -s ' ' ',')] > $3
-              bak=[$(echo `cat bak.txt|sed -r 's/(.*)/"\1"/'`|tr -s ' ' ',')]
+
+              file_lines_tojson -u remote.txt local.txt > $3
+              bak=`file_lines_tojson remote.txt`
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
-                  -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
+                -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
           }
           check_backup $CFHOST $CFHOST_BAK $CFHOST_JSON
@@ -181,6 +194,7 @@ jobs:
             git add $CFHOST_JSON
             git commit -m "updated $CFHOST_JSON"
             git push
+            echo "$CFHOST_JSON changed" >> $GITHUB_STEP_SUMMARY
           elif [ "$cfhostChanged" = false ]; then
             echo "cfhost no change" >> $GITHUB_STEP_SUMMARY
             [ ! -z '${{ inputs.proxys }}' ] || [ $EVENT_NAME != schedule ] && exit;
