--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -112,7 +112,7 @@ jobs:
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
 
           filterhost() {
-            [ ! -s "$1" ] && echo file $1 is empty! && return
+            [ ! -s "$1" ] && echo file $1 is empty! >$2 && return
             [ -f tocheck.txt ] && rm tocheck.txt 2>/dev/null
             for d in `cat $1|sort -u`; do
               #dig +short @1.1.1.1 $d 
@@ -130,7 +130,9 @@ jobs:
           }
 
           json_array_tolines(){
-            if [ -f "$1" ]; then cat $1; else echo $1; fi|tr -d '["]'|sed -r 's/, */\n/g'
+            local arr="$1"
+            [ -f "$1" ]; arr=`cat $1`
+             echo "$arr"|tr -d '["]'|sed -r 's/, */\n/g'
           }
           file_lines_tojson(){
             local uniq=0; 
@@ -150,6 +152,7 @@ jobs:
               local bak=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$2"`
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ "$bak" != "[]" ]; then
                 json_array_tolines $bak >> remote.txt
+                cat remote.txt|sort -u > tmp && mv tmp remote.txt
                 ret=`file_lines_tojson -u remote.txt`
                 [ "$ret" = "$bak" ] && echo "kvCfhostChanged=false" >> $GITHUB_ENV;
                 echo "get kv $2, merge" >> $GITHUB_STEP_SUMMARY
@@ -163,10 +166,13 @@ jobs:
               echo "after diff local" >> $GITHUB_STEP_SUMMARY
               wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               
-              echo 'filtering ...' >> $GITHUB_STEP_SUMMARY
-              filterhost remote.txt > remote.txt
-              wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+              if [ -s remote.txt ]; then
+                echo 'filter remote.txt' >> $GITHUB_STEP_SUMMARY
+                filterhost remote.txt > remote.txt
+                wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+              fi
               if [ '${{ contains(github.event.schedule, '* * * *') }}' = false ]; then
+                echo 'filter local.txt' >> $GITHUB_STEP_SUMMARY
                 filterhost local.txt > tmp
                 [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
                 [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ] && echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
@@ -175,7 +181,7 @@ jobs:
               fi
 
               file_lines_tojson -u remote.txt local.txt > $3
-              bak=`file_lines_tojson remote.txt`
+              bak=`file_lines_tojson -u remote.txt`
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
