--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -152,8 +152,8 @@ jobs:
               local bak=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$2"`
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ "$bak" != "[]" ]; then
                 json_array_tolines $bak >> remote.txt
-                cat remote.txt|sort -u > tmp && mv tmp remote.txt
-                ret=`file_lines_tojson -u remote.txt`
+                sort -uo remote.txt remote.txt
+                ret=`file_lines_tojson remote.txt`
                 [ "$ret" = "$bak" ] && echo "kvCfhostChanged=false" >> $GITHUB_ENV;
                 echo "get kv $2, merge" >> $GITHUB_STEP_SUMMARY
                 wc -l remote.txt >> $GITHUB_STEP_SUMMARY
@@ -162,7 +162,7 @@ jobs:
               json_array_tolines $3 > local.txt
               wc -l local.txt >> $GITHUB_STEP_SUMMARY
               #diff -b --suppress-common-lines remote.txt local.txt | grep '<' | sed 's/< *//' > remote.txt
-              comm -23 <(sort remote.txt) <(sort local.txt) > remote.txt
+              comm -23 <(sort remote.txt) <(sort local.txt) > tmp && mv tmp remote.txt
               echo "after diff local" >> $GITHUB_STEP_SUMMARY
               wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               
@@ -181,7 +181,7 @@ jobs:
               fi
 
               file_lines_tojson -u remote.txt local.txt > $3
-              bak=`file_lines_tojson -u remote.txt`
+              bak=`file_lines_tojson remote.txt`
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
