verify the cfhost data

--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -153,8 +153,6 @@ jobs:
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ "$bak" != "[]" ]; then
                 json_array_tolines $bak >> remote.txt
                 sort -uo remote.txt remote.txt
-                ret=`file_lines_tojson remote.txt`
-                [ "$ret" = "$bak" ] && echo "kvCfhostChanged=false" >> $GITHUB_ENV;
                 echo "get kv $2, merge" >> $GITHUB_STEP_SUMMARY
                 wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               fi
@@ -171,21 +169,27 @@ jobs:
                 filterhost remote.txt > tmp && mv tmp remote.txt
                 wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               fi
+              ret=`file_lines_tojson remote.txt`
+              [ "$ret" = "$bak" ] && echo "kvCfhostChanged=false" >> $GITHUB_ENV;
+              
               if [ '${{ contains(github.event.schedule, '* * * *') }}' = false ]; then
                 echo 'filter local.txt' >> $GITHUB_STEP_SUMMARY
                 filterhost local.txt > tmp
                 [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
-                [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ] && echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
+                if [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ]; then
+                  file_lines_tojson tmp > $3
+                  echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
+                fi
                 mv tmp local.txt
                 wc -l local.txt >> $GITHUB_STEP_SUMMARY
               fi
 
-              file_lines_tojson -u remote.txt local.txt > $3
               bak=`file_lines_tojson remote.txt`
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
           }
+          touch remote.txt
           check_backup $CFHOST $CFHOST_BAK $CFHOST_JSON
 
       - id: check-change
@@ -220,10 +224,11 @@ jobs:
             #fi
           fi
 
-      - id: get-proxys
+      - id: prepare-cfhost-proxys-json
         name: get proxys data
         # if: ${{ github.event_name == 'workflow_call' }}
         run: |
+          file_lines_tojson -u remote.txt local.txt > $3
           if [ ! -z '${{ inputs.proxys }}' ]; then
             echo '${{ inputs.proxys }}' > $PROXYS_JSON
           else
