--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -111,35 +111,6 @@ jobs:
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
 
-          filterhost() {
-            [ ! -s "$1" ] && echo file $1 is empty! >&2 && return
-            [ -f tocheck.txt ] && rm tocheck.txt 2>/dev/null
-            for d in `cat $1|sort -u`; do
-              #dig +short @1.1.1.1 $d 
-              ip=$(dig +short @1.1.1.1 $d | grep -v '\.$' | head -n1)
-              [ ! -z "$ip" ] && echo $ip $d >> tocheck.txt
-            done
-            if [ -s tocheck.txt ]; then
-              local cidr='src/cfcidr'
-              [ -f $cidr.js ] && local js=1 && mv $cidr.js $cidr.mjs
-              node ./.github/filterhost.mjs tocheck.txt
-              [ "$js" = 1 ] && mv $cidr.mjs $cidr.js
-            #else 
-            #  > $1
-            fi
-          }
-
-          json_array_tolines(){
-            local arr="$1"
-            [ -f "$1" ] && arr=`cat $1`
-             echo "$arr"|tr -d '["]'|sed -r 's/, */\n/g'
-          }
-          file_lines_tojson(){
-            local uniq=0; 
-            [ "$1" = '-u' ] && uniq=1 && shift;
-            echo [$(echo `cat $@|if [ "$uniq" = 1 ]; then sort -u; else cat; fi|sed -r 's/(.*)/"\1"/'`|tr -s ' ' ',')]
-          }
-
           check_backup(){
             local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$1"`
             if echo "$ret"|grep error; then
@@ -189,6 +160,7 @@ jobs:
                 -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
           }
+          . .github/common.sh
           touch remote.txt
           check_backup $CFHOST $CFHOST_BAK $CFHOST_JSON
 
@@ -228,6 +200,7 @@ jobs:
         name: get proxys data
         # if: ${{ github.event_name == 'workflow_call' }}
         run: |
+          . .github/common.sh
           file_lines_tojson -u remote.txt local.txt > $CFHOST_JSON
           if [ ! -z '${{ inputs.proxys }}' ]; then
             echo '${{ inputs.proxys }}' > $PROXYS_JSON
