--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -6,7 +6,7 @@ name: cfhost Workflow
 on:
   schedule:
     - cron: "0 * * * *"
-    - cron: "30 22 * * *"
+    # - cron: "30 22 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     #  branches: [ "main" ]
@@ -110,8 +110,13 @@ jobs:
         name: check cfhost, merge, backup
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
+          . .github/common.sh
+          touch remote.txt
 
           check_backup(){
+            json_array_tolines $3 > local.txt
+            wc -l local.txt >> $GITHUB_STEP_SUMMARY
+            
             local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$1"`
             if echo "$ret"|grep error; then
               grep 'namespace not found' <<< "$ret" && exit 1 || echo "$ret"
@@ -127,9 +132,7 @@ jobs:
                 echo "get kv $2, merge" >> $GITHUB_STEP_SUMMARY
                 wc -l remote.txt >> $GITHUB_STEP_SUMMARY
               fi
-              
-              json_array_tolines $3 > local.txt
-              wc -l local.txt >> $GITHUB_STEP_SUMMARY
+                
               #diff -b --suppress-common-lines remote.txt local.txt | grep '<' | sed 's/< *//' > remote.txt
               comm -23 <(sort remote.txt) <(sort local.txt) > tmp && mv tmp remote.txt
               echo "after diff local" >> $GITHUB_STEP_SUMMARY
@@ -142,26 +145,23 @@ jobs:
               fi
               ret=`file_lines_tojson remote.txt`
               [ "$ret" = "$bak" ] && echo "kvCfhostChanged=false" >> $GITHUB_ENV;
-              
-              if [ '${{ contains(github.event.schedule, '* * * *') }}' = false ]; then
-                echo 'filter local.txt' >> $GITHUB_STEP_SUMMARY
-                filterhost local.txt > tmp
-                [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
-                if [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ]; then
-                  file_lines_tojson tmp > $3
-                  echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
-                fi
-                mv tmp local.txt
-                wc -l local.txt >> $GITHUB_STEP_SUMMARY
-              fi
-
+            
               bak=`file_lines_tojson remote.txt`
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "$bak" "$CF_KV_API/$2" >> $GITHUB_STEP_SUMMARY
             fi
+            if [ -s local.txt ] && ([ '${{github.event.schedule}}' = '' ] || [ '${{github.event.schedule}}' =~ $ONCE_DAY ]); then
+              echo 'filter local.txt' >> $GITHUB_STEP_SUMMARY
+              filterhost local.txt > tmp
+              [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
+              if [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ]; then
+                file_lines_tojson tmp > $3
+                echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
+              fi
+              mv tmp local.txt
+              wc -l local.txt >> $GITHUB_STEP_SUMMARY
+            fi
           }
-          . .github/common.sh
-          touch remote.txt
           check_backup $CFHOST $CFHOST_BAK $CFHOST_JSON
 
       - id: check-change
