--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -115,33 +115,29 @@ jobs:
 
           check_backup(){
             json_array_tolines $3 > local.txt
-            wc -l local.txt >> $GITHUB_STEP_SUMMARY
+            echo "$3 - `wc -l local.txt`" >> $GITHUB_STEP_SUMMARY
             
             local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$1"`
             if echo "$ret"|grep error; then
               grep 'namespace not found' <<< "$ret" && exit 1 || echo "$ret"
             elif [ ! -z "$ret" ] && [ "$ret" != "[]" ]; then
               json_array_tolines $ret > remote.txt
-              echo "get kv $1" >> $GITHUB_STEP_SUMMARY
-              wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+              echo "get kv $1, `wc -l remote.txt`" >> $GITHUB_STEP_SUMMARY
               
               local bak=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$2"`
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ "$bak" != "[]" ]; then
                 json_array_tolines $bak >> remote.txt
                 sort -uo remote.txt remote.txt
-                echo "get kv $2, merge" >> $GITHUB_STEP_SUMMARY
-                wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+                echo "get kv $2, merge, `wc -l remote.txt`" >> $GITHUB_STEP_SUMMARY
               fi
                 
               #diff -b --suppress-common-lines remote.txt local.txt | grep '<' | sed 's/< *//' > remote.txt
               comm -23 <(sort remote.txt) <(sort local.txt) > tmp && mv tmp remote.txt
-              echo "after diff local" >> $GITHUB_STEP_SUMMARY
-              wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+              echo "diff local, `wc -l remote.txt`" >> $GITHUB_STEP_SUMMARY
               
               if [ -s remote.txt ]; then
-                echo 'filter remote.txt' >> $GITHUB_STEP_SUMMARY
                 filterhost remote.txt > tmp && mv tmp remote.txt
-                wc -l remote.txt >> $GITHUB_STEP_SUMMARY
+                 echo "filter, `wc -l remote.txt`" >> $GITHUB_STEP_SUMMARY
               fi
               ret=`file_lines_tojson remote.txt`
               [ "$ret" = "$bak" ] && echo "kvCfhostChanged=false" >> $GITHUB_ENV;
@@ -151,7 +147,6 @@ jobs:
                 -d "$bak" "$CF_KV_API/$2"
             fi
             if [ -s local.txt ] && ([ '${{github.event.schedule}}' = '' ] || [ '${{github.event.schedule}}' =~ $ONCE_DAY ]); then
-              echo 'filter local.txt' >> $GITHUB_STEP_SUMMARY
               filterhost local.txt > tmp
               [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
               if [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ]; then
@@ -159,7 +154,7 @@ jobs:
                 echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
               fi
               mv tmp local.txt
-              wc -l local.txt >> $GITHUB_STEP_SUMMARY
+              echo "filter, `wc -l local.txt`" >> $GITHUB_STEP_SUMMARY
             fi
           }
           check_backup $CFHOST $CFHOST_BAK $CFHOST_JSON
@@ -181,7 +176,7 @@ jobs:
             echo "$CFHOST_JSON changed" >> $GITHUB_STEP_SUMMARY
           fi
           if [ "$kvCfhostChanged" = false ]; then
-            echo "kv cfhost no change" >> $GITHUB_STEP_SUMMARY
+            echo "kv $CFHOST no change" >> $GITHUB_STEP_SUMMARY
             [ ! -z '${{ inputs.proxys }}' ] || [ $EVENT_NAME != schedule ] && exit;
             
             # cancel when trigger on schedule # [ -z `git diff --name-only $BEFORE $AFTER 2>&1` ]
