--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cf",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "_worker.js",
   "scripts": {
     "dev": "wrangler dev _worker.js --compatibility-date=2024-05-24",
@@ -13,7 +14,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "esbuild": "0.17.19"
-	},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GeekSnail/cf.git"
