verify cfhostpat data once a week

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "wrangler dev _worker.js --compatibility-date=2024-05-24",
     "deploy": "HTTP_PROXY=http://127.0.0.1:10809 wrangler deploy",
     "build": "wrangler build",
-    "esbuild": "node build.js"
+    "esbuild": "node build.cjs"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
