--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -117,8 +117,22 @@ jobs:
           touch remote.txt
 
           check_backup(){
+            if once_week; then
+              echo check $CFHOSTPAT_JS ...
+              node $CFHOSTPAT_JS toLines > pat.txt
+              filterhost pat.txt $CFHOSTPAT_JS
+            fi
+            
             json_array_tolines $CFHOST_JSON > local.txt
             echo "$CFHOST_JSON - `wc -l local.txt`" >> $GITHUB_STEP_SUMMARY
+            if [ -s local.txt ] && once_day; then
+              echo check $CFHOST_JSON ...
+              filterhost local.txt > tmp
+              [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
+              file_lines_tojson tmp > $CFHOST_JSON
+              mv tmp local.txt
+              echo "filter, `wc -l local.txt`" >> $GITHUB_STEP_SUMMARY
+            fi
             
             local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$CFHOST"`
             if echo "$ret"|grep error; then
@@ -136,6 +150,11 @@ jobs:
                 
               #diff -b --suppress-common-lines remote.txt local.txt | grep '<' | sed 's/< *//' > remote.txt
               comm -23 <(sort remote.txt) <(sort local.txt) > tmp && mv tmp remote.txt
+              # diff after manually update $CFHOSTPAT_JS
+              local pat=`node $CFHOSTPAT_JS cfhostPat|sed -r 's|^/(.*)/$|\1|'`
+              while read -r d; do
+                [[ $d =~ $pat ]] && sed -i '/'$d'/d' remote.txt
+              done < remote.txt
               echo "diff local, `wc -l remote.txt`" >> $GITHUB_STEP_SUMMARY
               
               if [ -s remote.txt ]; then
@@ -148,22 +167,6 @@ jobs:
               bak=`file_lines_tojson remote.txt`
               curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
                 -d "$bak" "$CF_KV_API/$CFHOST_BAK"
-            fi
-            if [ -s local.txt ] && once_day; then
-              echo check $CFHOST_JSON ...
-              filterhost local.txt > tmp
-              [ ! -s tmp ] && echo 'maybe filterhost error!' && exit 1
-              #if [ `comm -23 <(sort local.txt) <(sort tmp)|wc -l` != 0 ]; then
-                file_lines_tojson tmp > $CFHOST_JSON
-              #  echo "cfhostjsonChanged=true" >> $GITHUB_ENV;
-              #fi
-              mv tmp local.txt
-              echo "filter, `wc -l local.txt`" >> $GITHUB_STEP_SUMMARY
-            fi
-            if once_week; then
-              echo check $CFHOSTPAT_JS ...
-              node $CFHOSTPAT_JS toLines > pat.txt
-              filterhost pat.txt $CFHOSTPAT_JS
             fi
           }
           check_backup
