--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -5,7 +5,9 @@ name: IP Workflow
 # Controls when the workflow will run
 on:
   schedule:
+    # everyday morning, get ipupdate data, test and update to kv `proxy`, `proxy_bak`
     - cron: "0 23 * * *"
+    # at noon, sunset, and night, get kv `proxy`, test and update the same above
     - cron: "0 4,9,14 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
