--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -122,7 +122,7 @@ jobs:
             if once_week; then
               echo check $CFHOSTPAT_JSON ...
               node $CFHOSTPAT_JS toLines > pat.txt
-              filterhost handlePat pat.txt
+              filterhost pat.txt handlePat
             fi
             
             json_array_tolines $CFHOST_JSON > local.txt
